--- a/index.html
+++ b/index.html
@@ -1212,7 +1212,7 @@
                       
                       <!-- Team Member #3 -->
                       <div class="item">
-                          <img src="images/team/AZMIE.JPG" alt=""  />
+                          <img src="./images/team/AZMIE.jpg" alt=""  />
                           <h4>AHAMED AZMIE</h4>
                           <h5>Team Leader</h5>
                           <p></p>
